--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,16 @@
+---
+layout: default
+title: Home
+---
+
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto;">
-  <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/_qtJWZNEXuc?autoplay=1&mute=1&loop=1&playlist=YOUR_VIDEO_ID_HERE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://www.youtube.com/embed/YOUR_VIDEO_ID_HERE?autoplay=1&mute=1&loop=1&playlist=YOUR_VIDEO_ID_HERE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </div>
+
+# Welcome to My GitHub Pages Site
+
+Here is some content for your homepage.
+
 
 # Welcome to The Green Yard!
 
