--- a/about.qmd
+++ b/about.qmd
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+
 # About Me
 
-<img src="images/Screen Shot 2023-06-28 at 4.08.04 PM.png"
+![Profile Picture](images/Screen Shot 2023-06-28 at 4.08.04 PM.png)
