--- a/about.qmd
+++ b/about.qmd
@@ -4,4 +4,4 @@ layout: default
 
 # About Me
 
-![Profile Picture](images/Screen Shot 2023-06-28 at 4.08.04 PM.png)
+(images/Screen Shot 2023-06-28 at 4.08.04 PM.png)
