--- a/about.qmd
+++ b/about.qmd
@@ -2,6 +2,8 @@
 layout: default
 ---
 
-# About Me
+# About The Green Yard
 
 (images/Screen Shot 2023-06-28 at 4.08.04 PM.png)
+
+The Green Yard officially started in 2020 when myself, my wife and our son moved into our new house. We were specifically looking for a bigger house and I was interested in a larger property to continue my new interest in growing my own food. 
