--- a/about.qmd
+++ b/about.qmd
@@ -6,11 +6,9 @@ layout: default
 
 ![Planting a Sweet Granadilla](images/Screen Shot 2023-06-28 at 4.08.04 PM.png)
 
-## Experience
+## My Journey
 
-### Company A (2020 - Present)
-
-I have gained valuable experience working at Company A. Here are some highlights:
+My name is Schuyler Hamilton and I am a native Arizonan. I absolutely love Phoenix and after living in mutiple states around the country during College I decided to come back to my home. Growing up my mom used to garden, we would grow all kinds of vegetables and they also had several mature citrus trees (Navel Orange, Grapefruit and Mandarin) in their Green Yard. This exposed me to the world of growing your own food. During High School and College I got away from gardening and focusing on other aspects of life including Photography and Videography. My oldest son was born in 2018 and my life was never the same again. Not only did he change every aspect of living but I also awakened my passion for growing my own food. In early spring of 2019 I bought my first Banana plants (Blue Java and Dwarf Nam Wah) and planted them in our old Green Yard. 
 
 - Implemented new strategies that increased efficiency by 30%.
 - Led a team of 10 professionals in achieving project milestones.
