--- a/about.qmd
+++ b/about.qmd
@@ -15,7 +15,7 @@ My name is Schuyler Hamilton and I am a native Arizonan. I absolutely love Phoen
 
 ![Office Team](images/office-team.jpg)
 
-## Education
+## Growing in Phoenix
 
 ### University of Example (2015 - 2019)
 
@@ -23,6 +23,6 @@ Studied Computer Science with a focus on artificial intelligence and machine lea
 
 ![University Campus](images/university-campus.jpg)
 
-## Hobbies
+## Green Yards of the World
 
 In my free time, I enjoy:
