--- a/blog.qmd
+++ b/blog.qmd
@@ -25,7 +25,7 @@ Welcome to our guide on plants that thrive in the Phoenix area! Here, you'll dis
         .item:hover {
             transform: scale(1.05);
         }
-        img {
+        img {![Planting a Sweet Granadilla](images/Screen Shot 2023-06-28 at 4.08.04 PM.png)
             width: 200px;
             height: 200px;
             object-fit: cover;
