--- a/blog.qmd
+++ b/blog.qmd
@@ -25,7 +25,7 @@ Welcome to our guide on plants that thrive in the Phoenix area! Here, you'll dis
         .item:hover {
             transform: scale(1.05);
         }
-        img {![Planting a Sweet Granadilla](images/Screen Shot 2023-06-28 at 4.08.04 PM.png)
+        img {
             width: 200px;
             height: 200px;
             object-fit: cover;
@@ -38,12 +38,9 @@ Welcome to our guide on plants that thrive in the Phoenix area! Here, you'll dis
 </head>
 <body>
 
-    <h1>Welcome to My Page</h1>
-    <p>Click on an item below to read more about it!</p>
-
     <div class="item">
         <a href="blog/item1.html">
-            <img src="images/item1.jpg" alt="Item 1">
+            <img src="Image.jfif" alt="Mexican Papaya">
             <h3>Item 1</h3>
         </a>
     </div>
