--- a/blog.qmd
+++ b/blog.qmd
@@ -1,58 +1,125 @@
-# Welcome to The Green Yard!
-
-Welcome to our guide on plants that thrive in the Phoenix area! Here, you'll discover a variety of plants perfectly suited to the unique desert climate. Click on each image to explore more about how to grow, care for, and enjoy these resilient plants in your garden.
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clickable Items</title>
+    <title>Plants for Phoenix Gardens</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
             text-align: center;
+            margin: 0;
+            padding: 20px;
         }
+
+        h1 {
+            font-size: 36px;
+            color: #2c3e50;
+        }
+
+        p {
+            font-size: 18px;
+            color: #34495e;
+            margin-bottom: 30px;
+        }
+
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            justify-items: center;
+        }
+
         .item {
-            display: inline-block;
-            margin: 20px;
             border: 1px solid #ccc;
             padding: 10px;
             background-color: white;
             transition: transform 0.2s;
+            text-align: center;
         }
+
         .item:hover {
             transform: scale(1.05);
         }
+
         img {
-            width: 200px;
-            height: 200px;
+            width: 100%;
+            height: auto;
+            max-width: 200px;
             object-fit: cover;
+            border: 2px solid black; /* Added thin black border */
         }
+
         h3 {
             font-size: 18px;
             color: #333;
+        }
+
+        /* Responsive layout for smaller screens */
+        @media (max-width: 768px) {
+            .grid-container {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .grid-container {
+                grid-template-columns: 1fr;
+            }
         }
     </style>
 </head>
 <body>
 
-    <div class="item">
-        <a href="blog/item1.html">
-            <img src="Image.jfif" alt="Mexican Papaya">
-            <h3>Item 1</h3>
-        </a>
-    </div>
+    <h1>Plants for Phoenix Gardens</h1>
+    <p>Welcome to our guide on plants that thrive in the Phoenix area! Here, you'll discover a variety of plants perfectly suited to the unique desert climate. Click on each image to explore more about how to grow, care for, and enjoy these resilient plants in your garden.</p>
 
-    <div class="item">
-        <a href="blog/item2.html">
-            <img src="images/item2.jpg" alt="Item 2">
-            <h3>Item 2</h3>
-        </a>
-    </div>
+    <div class="grid-container">
+        <div class="item">
+            <a href="blog/item1.html">
+                <img src="images/item1.jpg" alt="Item 1">
+                <h3>Plant 1</h3>
+            </a>
+        </div>
 
-    <!-- Add more items as needed -->
+        <div class="item">
+            <a href="blog/item2.html">
+                <img src="images/item2.jpg" alt="Item 2">
+                <h3>Plant 2</h3>
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="blog/item3.html">
+                <img src="images/item3.jpg" alt="Item 3">
+                <h3>Plant 3</h3>
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="blog/item4.html">
+                <img src="images/item4.jpg" alt="Item 4">
+                <h3>Plant 4</h3>
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="blog/item5.html">
+                <img src="images/item5.jpg" alt="Item 5">
+                <h3>Plant 5</h3>
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="blog/item6.html">
+                <img src="images/item6.jpg" alt="Item 6">
+                <h3>Plant 6</h3>
+            </a>
+        </div>
+
+        <!-- Add more items as needed -->
+    </div>
 
 </body>
 </html>
