--- a/blog.qmd
+++ b/blog.qmd
@@ -1,4 +1,8 @@
-<!DOCTYPE html>
+<body>
+    <h1>Plants for Phoenix Gardens</h1>
+    <p>Welcome to our guide on plants that thrive in the Phoenix area! Here, you'll discover a variety of plants perfectly suited to the unique desert climate. Click on each image to explore more about how to grow, care for, and enjoy these resilient plants in your garden.</p>
+
+</body>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
