--- a/blog.qmd
+++ b/blog.qmd
@@ -1,93 +1,79 @@
-<body>
-    <h1>Plants for Phoenix Gardens</h1>
-    <p>Welcome to our guide on plants that thrive in the Phoenix area! Here, you'll discover a variety of plants perfectly suited to the unique desert climate. Click on each image to explore more about how to grow, care for, and enjoy these resilient plants in your garden.</p>
+---
+layout: default
+---
 
-</body>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plants for Phoenix Gardens</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            text-align: center;
-            margin: 0;
-            padding: 20px;
-        }
+# Plants for Phoenix Gardens
 
-        h1 {
-            font-size: 36px;
-            color: #2c3e50;
-        }
+Welcome to our guide on plants that thrive in the Phoenix area! Here, you'll discover a variety of plants perfectly suited to the unique desert climate. Click on each image to explore more about how to grow, care for, and enjoy these resilient plants in your garden.
 
-        p {
-            font-size: 18px;
-            color: #34495e;
-            margin-bottom: 30px;
-        }
+<div class="grid-container">
 
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            justify-items: center;
-        }
-
-        .item {
-            border: 1px solid #ccc;
-            padding: 10px;
-            background-color: white;
-            transition: transform 0.2s;
-            text-align: center;
-        }
-
-        .item:hover {
-            transform: scale(1.05);
-        }
-
-        img {
-            width: 100%;
-            height: auto;
-            max-width: 200px;
-            object-fit: cover;
-            border: 2px solid black; /* Added thin black border */
-        }
-
-        h3 {
-            font-size: 18px;
-            color: #333;
-        }
-
-        /* Responsive layout for smaller screens */
-        @media (max-width: 768px) {
-            .grid-container {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-
-        @media (max-width: 480px) {
-            .grid-container {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
-
-</body>
-
-    <div class="grid-container">
-        <!-- First Image: Mexican Papaya -->
-        <div class="item">
-            <a href="blog/item1.html">
-                <![Planting a Sweet Granadilla](images/Screen Shot 2023-06-28 at 4.08.04 PM.png)img src="images/Image.jpg" alt="Mexican Papaya">
-                <h3>Mexican Papaya</h3>
-            </a>
-        </div>
-
-        <!-- Add more items here -->
+    <div class="item">
+        <a href="blog/item1.html">
+            ![Mexican Papaya](images/Image.jfif)
+            <h3>Mexican Papaya</h3>
+        </a>
     </div>
 
-</body>
-</html>
+    <div class="item">
+        <a href="blog/item2.html">
+            ![Sweet Granadilla](images/Screen Shot 2023-06-28 at 4.08.04 PM.png)
+            <h3>Sweet Granadilla</h3>
+        </a>
+    </div>
 
+    <!-- Add more items as needed -->
+    
+</div>
+
+<style>
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        justify-items: center;
+    }
+
+    .item {
+        border: 2px solid black; /* Black border around each square */
+        padding: 10px;
+        background-color: white;
+        transition: transform 0.2s;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center; /* Center align items */
+        justify-content: flex-start; /* Align items at the top */
+    }
+
+    .item:hover {
+        transform: scale(1.05);
+    }
+
+    img {
+        width: 100%;
+        height: auto;
+        max-width: 200px; /* Adjust this size as needed */
+        object-fit: cover;
+        border: 2px solid black; /* Thin black border around images */
+    }
+
+    h3 {
+        font-size: 18px;
+        color: #333;
+        margin-top: 10px; /* Add some space above the title */
+    }
+
+    /* Responsive layout for smaller screens */
+    @media (max-width: 768px) {
+        .grid-container {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+
+    @media (max-width: 480px) {
+        .grid-container {
+            grid-template-columns: 1fr;
+        }
+    }
+</style>
