--- a/blog.qmd
+++ b/blog.qmd
@@ -8,7 +8,7 @@ Welcome to our guide on plants that thrive in the Phoenix area! Here, you'll dis
 
 ![Mexican Papaya](images/Image.jpg)
 
-![Fruit Punch Mango](Screen Shot 2024-08-09 at 10.10.37 AM.png)
+![Fruit Punch Mango](images/Screen Shot 2024-08-09 at 10.10.37 AM.png)
 
 <div class="grid-container">
 
@@ -21,7 +21,7 @@ Welcome to our guide on plants that thrive in the Phoenix area! Here, you'll dis
 
     <div class="item">
         <a href="blog/item2.html">
-            ![Fruit Punch Mango](Screen Shot 2024-08-09 at 10.10.37 AM.png)
+            ![Fruit Punch Mango](images/Screen Shot 2024-08-09 at 10.10.37 AM.png)
             <h3>Sweet Granadilla</h3>
         </a>
     </div>
