--- a/blog.qmd
+++ b/blog.qmd
@@ -6,13 +6,19 @@ layout: default
 
 Welcome to our guide on plants that thrive in the Phoenix area! Here, you'll discover a variety of plants perfectly suited to the unique desert climate. Click on each image to explore more about how to grow, care for, and enjoy these resilient plants in your garden.
 
-| ![Mexican Papaya](images/Image.jpg)  |
-|:--:|
-| **Mexican Papaya**  |
+<div style="display: flex; justify-content: space-around;">
 
-| ![Fruit Punch Mango](images/Screen Shot 2024-08-09 at 10.10.37 AM.png)  |
-|:--:|
-| **Fruit Punch Mango**  |
+  <div style="text-align: center;">
+    <img src="images/Image.jpg" alt="Mexican Papaya" style="width: 200px; height: auto;">
+    <p><strong>Mexican Papaya</strong></p>
+  </div>
+
+  <div style="text-align: center;">
+    <img src="images/Screen Shot 2024-08-09 at 10.10.37 AM.png" alt="Fruit Punch Mango" style="width: 200px; height: auto;">
+    <p><strong>Fruit Punch Mango</strong></p>
+  </div>
+
+</div>
 
 </div>
 
